--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,17 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  color: white;
+}
+
+h2 {
+
+  color: white;
+}
+
+h3 {
+
+  color: white;
 }
 
 button {
